--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h1>Upgrades</h1>
 				<div class='bulk-purchase-wrapper'>
 					<label for='amount'>Purchase Amount</label>
-          <input name='ammount' type="number" id="quantity" name="quantity">
+          <input type="number" name='amount' id='amount' value=1>
 				</div>
 				<div id='no-upgrades-message'>
 					<h3>You cannot afford any upgrades!</h3>
